--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger animated   delay-0s" href="#about">About</a>
-                        </li>
+                        </li><!-- 
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger animated   delay-0s" href="#skills">Expert</a>
-                        </li>
+                        </li> -->
 
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger animated   delay-0s" href="#awards">WORK</a>
@@ -91,7 +91,7 @@
 
                       <ul style="margin-top: 20px; " class="list-inline list-social-icons mb-0 d-block d-lg-none">
                           <li class="list-inline-item sos">
-                                <a href="http://facebook.com/eugenius.cahyanto" target="_blank" >
+                                <a href="https://www.facebook.com/dandi.hermawan" target="_blank" >
                           <span class="fa-stack fa-lg animated  fadeInLeft delay-1s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInLeft delay-1s"></i>
                             <i class="fa fa-facebook fa-stack-1x fa-inverse animated  fadeInLeft delay-1s"></i>
@@ -99,23 +99,14 @@
                         </a>
                           </li>
                           <li class="list-inline-item sos">
-                              <a href="http://twitter.com/cahyanto2000" target="_blank">
+                              <a href="https://twitter.com/dandihermawan_" target="_blank">
                           <span class="fa-stack fa-lg animated  fadeInLeft delay-2s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInLeft delay-2s"></i>
                             <i class="fa fa-twitter fa-stack-1x fa-inverse animated  fadeInLeft delay-2s"></i>
                           </span>
                         </a>
-                          </li>
                           <li class="list-inline-item sos">
-                              <a href="http://cahyanto-mediaquality.blogspot.com/" target="_blank">
-                          <span class="fa-stack fa-lg animated  fadeInLeft delay-3s">
-                            <i class="fa fa-circle fa-stack-2x animated  fadeInLeft delay-3s"></i>
-                            <i class="fa fa-rss fa-stack-1x fa-inverse animated  fadeInLeft delay-3s"></i>
-                          </span>
-                        </a>
-                          </li>
-                          <li class="list-inline-item sos">
-                              <a href="http://instagram.com/cahyanto2000" target="_blank">
+                              <a href="https://www.instagram.com/massdandi" target="_blank">
                           <span class="fa-stack fa-lg animated  fadeInRight delay-3s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInRight delay-3s"></i>
                             <i class="fa fa-instagram fa-stack-1x fa-inverse animated  fadeInRight delay-3s"></i>
@@ -142,7 +133,7 @@
 
                       <ul style="margin-top: 20px; " class="list-inline list-social-icons mb-0 medsos">
                           <li class="list-inline-item">
-                                <a href="http://facebook.com/eugenius.cahyanto" target="_blank" >
+                                <a href="https://www.facebook.com/dandi.hermawan" target="_blank" >
                           <span class="fa-stack fa-lg animated  fadeInLeft delay-1s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInLeft delay-1s"></i>
                             <i class="fa fa-facebook fa-stack-1x fa-inverse animated  fadeInLeft delay-1s"></i>
@@ -150,7 +141,7 @@
                         </a>
                           </li>
                           <li class="list-inline-item">
-                              <a href="http://twitter.com/cahyanto2000" target="_blank">
+                              <a href="https://twitter.com/dandihermawan_" target="_blank">
                           <span class="fa-stack fa-lg animated  fadeInLeft delay-2s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInLeft delay-2s"></i>
                             <i class="fa fa-twitter fa-stack-1x fa-inverse animated  fadeInLeft delay-2s"></i>
@@ -158,15 +149,7 @@
                         </a>
                           </li>
                           <li class="list-inline-item">
-                              <a href="http://cahyanto-mediaquality.blogspot.com/" target="_blank">
-                          <span class="fa-stack fa-lg animated  fadeInLeft delay-3s">
-                            <i class="fa fa-circle fa-stack-2x animated  fadeInLeft delay-3s"></i>
-                            <i class="fa fa-rss fa-stack-1x fa-inverse animated  fadeInLeft delay-3s"></i>
-                          </span>
-                        </a>
-                          </li>
-                          <li class="list-inline-item">
-                              <a href="http://instagram.com/cahyanto2000" target="_blank">
+                              <a href="https://www.instagram.com/massdandi" target="_blank">
                           <span class="fa-stack fa-lg animated  fadeInRight delay-3s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInRight delay-3s"></i>
                             <i class="fa fa-instagram fa-stack-1x fa-inverse animated  fadeInRight delay-3s"></i>
@@ -182,7 +165,7 @@
                         </a>
                           </li>
                           <li class="list-inline-item">
-                              <a href="login.html" target="_blank">
+                              <a href="#" target="_blank">
                           <span class="fa-stack fa-lg animated  fadeInRight delay-1s">
                             <i class="fa fa-circle fa-stack-2x animated  fadeInRight delay-1s"></i>
                             <i class="fa fa-folder-open-o fa-stack-1x fa-inverse animated  fadeInRight delay-1s"></i>
@@ -194,39 +177,7 @@
                   </div>
               </section>
               <section class=" d-flex flex-column" id="skills">
-                 <div class="p-lg-5 p-3 skill-cover">
-                  <h3 class="text-center text-white" style="margin-bottom: 40px;">Expert</h3>
-                  <div class="row text-center my-auto ">
-                                          <div class="col-md-3 col-sm-6">
-                          <div class="skill-item">
-                              <i class="fas fa-globe-asia fa-5x  text-light"></i>
-                              <br><br><br>
-                              <p>IOT</p>
-                          </div>
-                      </div>
-                                            <div class="col-md-3 col-sm-6">
-                          <div class="skill-item">
-                              <i class="fas fa-bong fa-5x  text-light"></i>
-                              <br><br><br>
-                              <p>DATA SCIENCE</p>
-                          </div>
-                      </div>
-                                            <div class="col-md-3 col-sm-6">
-                          <div class="skill-item">
-                              <i class="fa fa-gear fa-5x  text-light"></i>
-                              <br><br><br>
-                              <p>SOFTWARE ENGINERING</p>
-                          </div>
-                      </div>
-                                            <div class="col-md-3 col-sm-6">
-                          <div class="skill-item">
-                              <i class="fas fa-adjust fa-5x  text-light"></i>
-                              <br><br><br>
-                              <p>IT CONSULTANT</p>
-                          </div>
-                      </div>
-                                        </div>
-                 </div>
+                 <div class="p-lg-5 p-3 skill-cover"></div>
               </section>
 
 
